--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ Author: Jesus R. Rijo (IST 126.001)
     <script src="webgl-demo.js" type="module" defer></script>
   </head>
 
-  <script src="https://sagecell.sagemath.org/static/embedded_sagecell.js"></script>
+  <script src="https://jesusrrc.github.io/static/embedded_sagecell.js"></script>
 <script>sagecell.makeSagecell({"inputLocation": ".sage"});</script>
   
   <body>
